# opentelemetry-metric-python

./: .gitignore  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python-package.yml
dynatrace/: setup.cfg  setup.py
dynatrace/src/dynatrace/opentelemetry/metric/: exporter.py  serializer.py  version.py
dynatrace/test/: test_serializer.py
example/: basic_example.py  basic_sample.py  example_usage.sh  install_and_run.sh  observer.py  setup_for_example.sh
src/dynatrace/opentelemetry/metrics/export/: __init__.py  _constants.py  _exporter.py  _factory.py  _histogram_utils.py  dynatracemetadataenricher.py  oneagentmetadataenricher.py  serializer.py
test/: test_dynatracemetadataenricher.py  test_exporter.py  test_histogram_utils.py  test_oneagentmetadataenricher.py  test_serialization.py  test_serializer.py  test_serializer_parametrized.py
