# Copyright 2020 Dynatrace LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = opentelemetry-exporter-dynatrace-metrics
version = attr: src.dynatrace.opentelemetry.metrics.export.VERSION
description = Dynatrace Metric Exporter for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Dynatrace
author_email = opensource@dynatrace.com
url = https://github.com/dynatrace-oss/opentelemetry-metric-python/
project_urls =
    Dynatrace = https://www.dynatrace.com/
    Source = https://github.com/dynatrace-oss/opentelemetry-metric-python/
    Download = https://pypi.org/project/opentelemetry-exporter-dynatrace-metrics/#files
license = Apache-2.0
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Monitoring

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
install_requires=
    opentelemetry-api~=1.10.0
    opentelemetry-sdk~=1.10.0
    requests~=2.25
    dynatrace-metric-utils~=0.1.0b0

[tool:pytest]
testpaths = test

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_exporter =
    dynatrace = dynatrace.opentelemetry.metric.exporter:DynatraceMetricsExporter
